--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
 }
 
 h1 {
+    font-size: 10px;
     margin-bottom: 20px;
 }
 
@@ -45,8 +46,9 @@ button:hover {
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fill, 300px);
     gap: 20px;
+    justify-content: center;
 }
 
 .grid-item {
@@ -55,10 +57,16 @@ button:hover {
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
+    width: 300px;
 }
 
 .grid-item img {
     width: 100%;
     border-radius: 5px;
     margin-bottom: 10px;
+}
+
+.grid-item p {
+    font-size: 14px;
+    color: #333;
 }
