--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
 }
 
 h1 {
+    font-family: Arial, sans-serif;
     font-size: 10px;
     margin-bottom: 20px;
 }
@@ -54,14 +55,14 @@ button:hover {
 .grid-item {
     background-color: #fff;
     padding: 10px;
-  //  border-radius: 5px;
-  //  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: left;
+//    border-radius: 5px;
+ //   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
     width: 30px;
 }
 
 .grid-item img {
- //   width: 100%;
+//    width: 100%;
     border-radius: 5px;
     margin-bottom: 10px;
 }
